feat: compose all components
